stylin for days'

--- a/client/src/components/Form.css
+++ b/client/src/components/Form.css
@@ -11,6 +11,16 @@
     padding:var(--size-400);
     color:var(--clr-neutral-100)
 }
+.img-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.img-prev{
+    height:40rem;
+    width:auto;
+    object-fit: cover;
+}
 .form-style h2{
     text-align: center;
     font-size: var(--fs-700);
@@ -28,4 +38,8 @@ select,
 textarea{
     width:100%;
     border-radius: var(--size-200);
+}
+.sub-btn{
+    margin:1rem;
+    border-radius: var(--size-400);
 }
