--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,21 @@
 :root {
-  --clr-accent-800: hsl(122,100%,19%);
-  --clr-accent-700: hsl(19,54%,21%);
+  --clr-accent-900: #434344;
+  --clr-accent-800: rgb(133,168,112);
+  --clr-accent-700: rgb(121, 94, 86);
   --clr-accent-600: hsl(26,20%,68%);
   --clr-accent-500: hsl(78,21%,50%);
-  --clr-accent-400: hsl(176,9%,65%);
-  --clr-accent-300: hsl(127,21%,85%);
+  --clr-accent-400: #83827f;
+  --clr-accent-300: #d1dcbc;
 
   --clr-primary-400: hsl(228, 39%, 23%);
 
   --clr-neutral-900: hsl(233, 12%, 13%);
   --clr-neutral-800: hsl(0,0%,10%);
-  --clr-neutral-100: hsl(51,14%,90%);
+  --clr-neutral-100: rgb(243,240,232);
 
-  --ff-primary:'Tilt Neon', cursive;
+  --ff-primary:'Cormorant SC', serif;
+  --ff-secondary: 'Aboreto', cursive;
+  --ff-thrid:'Give You Glory', cursive;
 
   --ff-body: var(--ff-primary);
   --ff-heading: var(--ff-primary);
@@ -125,12 +128,13 @@ svg {
 
 body {
   font-size: var(--fs-body);
-  font-family: var(--ff-body);
+  font-family: var(--ff-primary);
   color: var(--clr-primary-400);
 }
 
 p:not([class]) {
   color:hsl(216,6%,35%);
+  font-size: var(--fs-600);
 }
 /* p[data-width='wide']{
   max-width: 42ch;
@@ -140,7 +144,7 @@ button {
   cursor: pointer;
   text-decoration: none;
   border:0 ;
-  border-radius: 100vmax;
+  border-radius: 1em;
   padding: 1.25em 2.5em;
   font-weight: var(--fw-bold);
   font-size: var(--fs-button);
@@ -162,12 +166,12 @@ button {
   white-space: nowrap;
   border:0;
 }
-.container{
+/* .container{
   --max-width: 1110px;
   --padding: 1rem;
   width: min(var(--max-width), 100% - (var(--padding)*2));
   margin-inline: auto;
-}
+} */
 
 :where(.flow :not(:first-child)){
   margin-top: var(--flow-spacer, 3em);
@@ -185,7 +189,7 @@ button {
 }
 
 .App{
-  background-color: hsl(0,0%,10%);
+  background-color: var(--clr-accent-900);
 }
 .errors{
   color:red;
