--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,10 +1,20 @@
-.footer{
-    background-color: var(--clr-accent-400);
-    padding: 2rem;
+.even-columns-footer{
+    display: grid;
+    gap:1rem;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
 }
+.footer{
+    background-color: var(--clr-accent-800);
+    padding: 2rem 2rem 0 2rem;
+    border-top-right-radius: var(--size-200);
+    border-top-left-radius: var(--size-200);
+}
+
 .logo{
     width: 8em;
     height: auto;
+    margin:0 1em;
 }
 
 ul{
@@ -12,9 +22,26 @@ ul{
 }
 ul li a{
     display:flex;
-    text-decoration: none;
 }
+
 a:hover,
 a:focus {
     color: var(--clr-primary-900);
+}
+.footer-link{
+    text-decoration: inherit;
+    color:var(--clr-accent-900);
+}
+.footer-link:hover,
+.footer-link:focus{
+    color:var(--clr-accent-900);
+    text-decoration: underline;
+}
+@media(max-width: 50em){
+    .logo{
+        display:none;
+    }
+    .logo-div{
+        display:none;
+    }
 }
