--- a/client/src/components/NavStyles.css
+++ b/client/src/components/NavStyles.css
@@ -1,12 +1,10 @@
-.primary-heading {
-    /* margin-top: var(--size-600); */
-} 
+
 
 .nav-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: var(--clr-accent-500);
+    background-color: var(--clr-neutral-100);
     border-bottom-left-radius: var(--size-200);
     border-bottom-right-radius: var(--size-200);
     padding: 0 2rem;
@@ -27,15 +25,24 @@
 }
 
 .nav-list a{
+    font-family: 'Give You Glory', cursive;
+    font-size: var(--fs-900);
     text-decoration: none;
     color: var(--clr-accent-700);
 }
 
 .nav-list a:hover,
 .nav-list a:focus {
-    color: var(--clr-accent-400);
+    color: var(--clr-accent-900);
 }
-
+.nav-logo{
+    border-radius: var(--size-200);
+    height:10rem;
+    width:auto;
+}
+.invis{
+    visibility: hidden;
+}
 @media(max-width: 50em) {
     .primary-navigation {
         display: none;
@@ -58,6 +65,7 @@
         background: var(--clr-neutral-100);
         border-radius: var(--size-100);
         box-shadow: 0 0 0.75em rgb(0, 0, 0, 0.05);
+        z-index: 100;
     }
 
     .primary-heading-show {
@@ -66,12 +74,15 @@
         inset: 0;
         background-image: linear-gradient(rgb(0 0 0/0), rgb(0 0 0/.8));
     }
-
+    .nav-logo{
+        height: 7rem;
+    }
     .nav-list {
         display: grid;
         gap: var(--size-600);
         text-align: center;
         font-weight: var(--fw-bold);
+        z-index: 100;
     }
 
     .primary-navigation[data-visible] {
