--- a/client/src/views/Home.css
+++ b/client/src/views/Home.css
@@ -1,34 +1,63 @@
-Swiper{
-    height:auto!important;
 
-}
-SwiperSlide{
-    height:auto!important;
-}
-.slide-img{
-    width:100%;
-    height:auto;
-    /* object-fit: cover; */
-}
-.hero{
-
+.hero {
     background-color: var(--clr-accent-600);
 }
-.hero-text{
-    padding:1em;
+
+.swiper {
+    width: 100%;
+    height: 50vh;
+}
+
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+
+}
+
+.hero-text {
+    padding: 1em;
     border-radius: var(--size-200);
     background-color: var(--clr-accent-300);
 }
-.hero-text h2{
-    font-size: var(--fs-700);
+
+.hero-text h2 {
+    font-size: var(--fs-800);
     font-weight: var(--fw-bold);
 }
-.hero-text-right{
-    display:flex;
+
+.hero-text-right {
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
-.text-img{
+
+.text-img {
     width: 15em;
-    height:auto;
+    height: auto;
+    border-radius: 50%;
+    box-shadow: 0 0 10px 5px var(--clr-neutral-900);
+}
+
+.swiper-button-next,
+.swiper-button-prev{
+    color:white !important;
+    text-rendering: auto;
+}
+.register-btn{
+    border-radius: var(--size-700);
+}
+@media(max-width: 50em){
+    .swiper{
+        height:22vh;
+    }
 }
