--- a/client/src/views/Shop.css
+++ b/client/src/views/Shop.css
@@ -14,6 +14,7 @@
     object-fit: cover;
 }
 .card-text{
+    color:var(--clr-accent-900);
     background-color: var(--clr-accent-300);
     border-radius: var(--size-200);
     padding:var(--size-200);
@@ -21,7 +22,7 @@
 }
 .card-text h3{
     opacity:1;
-    font-size: var(--fs-700);
+    font-size: var(--fs-400);
     text-align: center;
     line-height: 1.4rem;
 }
@@ -48,10 +49,11 @@
 }
 .add-to-cart{
     width: 90%;
-    background-color: #007BFF;
+    background-color: rgb(15,97,174);
     margin: .3rem;
     display: flex;
     justify-content: center;
+    border-radius: var(--size-500);
 }
 .card-title h3{
     font-size: var(--fs-500);
@@ -72,15 +74,59 @@
     gap:.5rem;
 }
 .plus-minus{
-    background-color: #007BFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(15,97,174);
+    width:2.5rem;
+    height:2.5rem;
     padding:.7rem;
     margin:.3rem;
+    border-radius: 50%;
 }
 .remove-btn{
-    background-color: #DC3545;
+    background-color: #bb2433;
     margin:.1rem;
+    border-radius: var(--size-600);
 }
-@media screen and (min-width:600px){
+.category{
+    background-color: var(--clr-accent-700);
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0;
+    border-bottom-left-radius: var(--size-200);
+    border-bottom-right-radius: var(--size-200);
+}
+.category button{
+    background-color: var(--clr-accent-700);
+    color:var(--clr-neutral-100);
+    padding: .7em .7em;
+}
+.category button:hover{
+    background-color:  rgb(99, 80, 74);
+}
+.edit-link{
+    text-decoration: none;
+}
+
+.edit-btn{
+    background-color: rgb(15,97,174);
+    border-radius: var(--size-400);
+    padding:1em .5em;
+    margin:.5em;
+}
+.delete-btn{
+    background-color: #bb2433;
+    border-radius: var(--size-400);
+    padding:1em .5em;
+    margin:.5em 0;
+}
+
+
+
+
+@media screen and (min-width:50em){
 
     .product-card{
         flex-direction: column;
@@ -94,5 +140,21 @@
     .card-title h3{
         font-size: var(--fs-600);
         font-weight: var(--fw-bold);
+    }
+    .category button{
+        padding:.7em 2.5em;
+        font-size: 1.25rem;
+    }
+}
+@media(max-width:50em){
+    .card-text{
+        width:16rem;
+
+    }
+    .card-title{
+        font-size: 1rem;
+    }
+    .card-text button{
+        padding:.5em;
     }
 }
