--- a/client/src/components/SecondaryNav.css
+++ b/client/src/components/SecondaryNav.css
@@ -22,6 +22,7 @@
     border: 2px solid black;
     border-radius: 50%;
     padding: 1em;
+    margin:.5em;
 }
 .cart-btn img{
     width:var(--size-700);
